--- a/translation/it/fortify_dwarfenwall.po
+++ b/translation/it/fortify_dwarfenwall.po
@@ -4,20 +4,21 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-21 22:02+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: fortify_dwarfenwall.xml
 msgid "Fortify Dwarfenwall"
@@ -286,6 +287,8 @@ msgstr "Lo sappiamo gia'. Arriva al dunque."
 msgid ""
 "What?!! The curse can be lifted from us? Why do I hear of this only now?"
 msgstr ""
+"Coosa!?!? La maledizione può essere rimossa? E come mai ne sento parlare "
+"solo ora?"
 
 #: fortify_dwarfenwall.xml
 msgid "As you wish."
