--- a/translation/it/herb_collector.po
+++ b/translation/it/herb_collector.po
@@ -4,20 +4,21 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-21 22:11+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: herbalist.xml
 msgid "Herb collector"
@@ -28,11 +29,12 @@ msgid "And another good deed done. I could get used to this."
 msgstr "E un'altra buona azione e' stata fatta. Ormai potrei abituarmici."
 
 #: herbalist.xml
-#, fuzzy
 msgid ""
 "The herbalist of Joringsbridge wants to have the berries of 10 bushes. \".."
 "(10 - herbalist.bushes)..\" berries have been collected."
-msgstr "L'erborista di Joringsbridge vuole avere le bacche di 10 arbusti."
+msgstr ""
+"L'erborista di Joringsbridge vuole le bacche di 10 arbusti. \"..(10 - "
+"herbalist.bushes)..\" sono state collezionate"
 
 #: herbalist.xml
 msgid "joringsbridge"
@@ -208,4 +210,4 @@ msgstr "Nord Meadow"
 
 #: herbalist.xml
 msgid "Collect\"..bushes_left..\" more herbs."
-msgstr ""
+msgstr "Colleziona altre \"..bushes_left..\" bacche dagli arbusti."
