--- a/translation/it/menu.po
+++ b/translation/it/menu.po
@@ -5,20 +5,21 @@
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # Axander <axander79@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-09-12 21:30+0200\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-21 21:44+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../src/core/damage.cpp:143 ../src/gui/charinfo.cpp:930
 msgid "Physical"
@@ -197,30 +198,29 @@ msgstr "Volonta'"
 msgid " max. "
 msgstr " max. "
 
-#: ../src/gui/itemwindow.cpp:168
-#: ../src/gui/itemwindow.cpp:169
+#: ../src/gui/itemwindow.cpp:168 ../src/gui/itemwindow.cpp:169
 msgid "Equipped:\n"
-msgstr ""
+msgstr "Equpaggiato:\n"
 
 #: ../src/gui/itemwindow.cpp:191
 msgid "Equipped (secondary):\n"
-msgstr ""
+msgstr "Equipaggiato (secondaria):\n"
 
 #: ../src/gui/itemwindow.cpp:216
 msgid "Equipped (left):\n"
-msgstr ""
+msgstr "Equipaggiato (sinistra):\n"
 
 #: ../src/gui/itemwindow.cpp:217
 msgid "Equipped (right):\n"
-msgstr ""
+msgstr "Equipaggiato (destra):\n"
 
 #: ../src/gui/itemwindow.cpp:256
 msgid "Hovered:\n"
-msgstr ""
+msgstr "Sollevato:\n"
 
 #: ../src/gui/itemwindow.cpp:265
 msgid "Attached:\n"
-msgstr ""
+msgstr "Attaccato:\n"
 
 #: ../src/gui/charcreate.cpp:120 ../src/gui/charinfo.cpp:864
 #: ../src/gui/partyinfo.cpp:450 ../src/gui/savegamelist.cpp:186
@@ -246,45 +246,43 @@ msgstr "Danno base"
 
 #: ../src/gui/charinfo.cpp:325
 msgid "You have"
-msgstr ""
+msgstr "Tu hai"
 
 #: ../src/gui/charinfo.cpp:325
 msgid "attribute points to spend"
-msgstr ""
+msgstr "punti attributo da spendere"
 
 #: ../src/gui/charinfo.cpp:569
 msgid "Damage dealt by "
 msgstr "Danno inferto da "
 
 #: ../src/gui/charinfo.cpp:588
-#, fuzzy
 msgid "Chance to hit "
-msgstr "Probabilita' colpo critico "
+msgstr "Probabilità di colpire"
 
 #: ../src/gui/charinfo.cpp:604
 msgid "Evade"
-msgstr ""
+msgstr "Evasione"
 
 #: ../src/gui/charinfo.cpp:622
-#, fuzzy
 msgid "Chance to get hit by "
-msgstr "Probabilita' di essere colpito da "
+msgstr "Probabilità di essere colpito"
 
 #: ../src/gui/charinfo.cpp:642
 msgid "Player info"
-msgstr ""
+msgstr "Informazioni sul Giocatore"
 
 #: ../src/gui/charinfo.cpp:645
 msgid "Attributes"
-msgstr ""
+msgstr "Attributi"
 
 #: ../src/gui/charinfo.cpp:648
 msgid "Offense"
-msgstr ""
+msgstr "Attacco"
 
 #: ../src/gui/charinfo.cpp:651
 msgid "Defense"
-msgstr ""
+msgstr "Difesa"
 
 #: ../src/gui/charinfo.cpp:713
 msgid "Damage dealt to  "
@@ -319,11 +317,11 @@ msgstr "Il Potere Magico incrementa il danno degli Attacchi Magici."
 
 #: ../src/gui/charinfo.cpp:888
 msgid "Attr points"
-msgstr "P.ti Attributo"
+msgstr "Punti Attributo"
 
 #: ../src/gui/charinfo.cpp:889
 msgid "Attribute points remaining to distribute"
-msgstr "P.ti Attributo"
+msgstr "Punti Attributo"
 
 #: ../src/gui/charinfo.cpp:892 ../src/gui/controlpanel.cpp:245
 msgid "Experience"
@@ -416,15 +414,15 @@ msgstr "Lascia:"
 
 #: ../src/gui/inventory.cpp:372
 msgid "Small"
-msgstr ""
+msgstr "Piccolo"
 
 #: ../src/gui/inventory.cpp:375
 msgid "Medium"
-msgstr ""
+msgstr "Medio"
 
 #: ../src/gui/inventory.cpp:378
 msgid "Big"
-msgstr ""
+msgstr "Grande"
 
 #: ../src/gui/mainmenu.cpp:132
 msgid "Single player"
@@ -448,15 +446,15 @@ msgstr "Chiudi"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "Really delete savegame?"
-msgstr ""
+msgstr "Cancellare definitivamente il salvataggio?"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "Yes"
-msgstr ""
+msgstr "Si"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "No"
-msgstr ""
+msgstr "No"
 
 #: ../src/gui/messageboxes.cpp:52 ../src/gui/messageboxes.cpp:198
 #: ../src/gui/networkwindows.cpp:95 ../src/gui/networkwindows.cpp:223
@@ -486,71 +484,71 @@ msgstr "Ospita"
 
 #: ../src/gui/optionswindow.cpp:91
 msgid "Easy"
-msgstr ""
+msgstr "Facile"
 
 #: ../src/gui/optionswindow.cpp:92
 msgid "Normal"
-msgstr ""
+msgstr "Normale"
 
 #: ../src/gui/optionswindow.cpp:93
 msgid "Hard"
-msgstr ""
+msgstr "Difficile"
 
 #: ../src/gui/optionswindow.cpp:94
 msgid "Insane"
-msgstr ""
+msgstr "Folle"
 
 #: ../src/gui/optionswindow.cpp:164
 msgid "White"
-msgstr ""
+msgstr "Bianco"
 
 #: ../src/gui/optionswindow.cpp:165
 msgid "Black"
-msgstr ""
+msgstr "Nero"
 
 #: ../src/gui/optionswindow.cpp:166
 msgid "Red"
-msgstr ""
+msgstr "Rosso"
 
 #: ../src/gui/optionswindow.cpp:167
 msgid "Green"
-msgstr ""
+msgstr "Verde"
 
 #: ../src/gui/optionswindow.cpp:168
 msgid "Blue"
-msgstr ""
+msgstr "Blu"
 
 #: ../src/gui/optionswindow.cpp:169
 msgid "Yellow"
-msgstr ""
+msgstr "Giallo"
 
 #: ../src/gui/optionswindow.cpp:170
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: ../src/gui/optionswindow.cpp:171
 msgid "Cyan"
-msgstr ""
+msgstr "Ciano"
 
 #: ../src/gui/optionswindow.cpp:172
 msgid "Orange"
-msgstr ""
+msgstr "Arancione"
 
 #: ../src/gui/optionswindow.cpp:173
 msgid "Pink"
-msgstr ""
+msgstr "Rosa"
 
 #: ../src/gui/optionswindow.cpp:174
 msgid "Purple"
-msgstr ""
+msgstr "Viola"
 
 #: ../src/gui/optionswindow.cpp:175
 msgid "Cornflower Blue"
-msgstr ""
+msgstr "Lillà"
 
 #: ../src/gui/optionswindow.cpp:211
 msgid "System default"
-msgstr ""
+msgstr "Impostazioni di base"
 
 #: ../src/gui/optionswindow.cpp:308
 msgid "Shortkeys"
@@ -618,7 +616,7 @@ msgstr "Colore di evidenziazione (nemici)"
 
 #: ../src/gui/optionswindow.cpp:364
 msgid "Grab mouse in windowed mode (needs restart)"
-msgstr ""
+msgstr "Cattura il mouse nella modalità finestra (needs restart)"
 
 #: ../src/gui/questinfo.cpp:160
 msgid "open"
@@ -633,129 +631,124 @@ msgid "failed"
 msgstr "fallite"
 
 #: ../src/gui/savegamelist.cpp:174
-#, fuzzy
 msgid "Characters"
-msgstr "Personaggio"
+msgstr "Personaggi"
 
 #: ../src/gui/savegamelist.cpp:183
 msgid "Delete"
-msgstr ""
+msgstr "Cancella"
 
-#: ../src/gui/savegamelist.cpp:188
-#: ../src/gui/charinfo.cpp:488
+#: ../src/gui/savegamelist.cpp:188 ../src/gui/charinfo.cpp:488
 msgid "Level"
 msgstr "Livello"
 
 #: ../src/gui/skilltree.cpp:537
-#, fuzzy
 msgid "Skillpoints"
-msgstr "Punti Vita"
+msgstr "Punti Abilità"
 
 #: ../src/gui/skilltree.cpp:542
 msgid "Next Skillpoint at Level"
-msgstr ""
+msgstr "I prossimi punti Abilità al Livello"
 
 #: ../src/gui/worldmap.cpp:141
 msgid "Town Portal"
-msgstr "Portale Magico"
+msgstr "Portale Cittadino"
 
 #: playerclasses.xml
 msgid "Warrior"
-msgstr ""
+msgstr "Guerriero"
 
 #: playerclasses.xml
-#, fuzzy
 msgid "Magician"
-msgstr "Scudo di ferro"
+msgstr "Mago"
 
 #: playerclasses.xml
-#, fuzzy
 msgid "Archer"
-msgstr "Bracconiere"
+msgstr "Arciere"
 
 #: playerclasses.xml
 msgid "Priest"
-msgstr ""
+msgstr "Chierico"
 
 #: playerclasses.xml
 msgid "ranger"
-msgstr ""
+msgstr "Guardaboschi"
 
 #: playerclasses.xml
 msgid "archer"
-msgstr ""
+msgstr "arciere"
 
 #: playerclasses.xml
 msgid "wizard"
-msgstr ""
+msgstr "mago"
 
 #: playerclasses.xml
 msgid "sorceress"
-msgstr ""
+msgstr "stregona"
 
 #: playerclasses.xml
 msgid "mage"
-msgstr ""
+msgstr "mago"
 
 #: playerclasses.xml
 msgid "priest"
-msgstr ""
+msgstr "chierico"
 
 #: playerclasses.xml
 msgid "priestess"
-msgstr ""
+msgstr "sacerdotessa"
 
 #: playerclasses.xml
 msgid "warrior"
-msgstr ""
+msgstr "guerriero"
 
 #: playerclasses.xml
 msgid "fencer"
-msgstr ""
+msgstr "spadaccina"
 
 #: playerclasses.xml
 msgid "Fire magic"
-msgstr ""
+msgstr "Magia del Fuoco"
 
 #: playerclasses.xml
 msgid "Ice magic"
-msgstr ""
+msgstr "Magia di Ghiaccio"
 
 #: playerclasses.xml
 msgid "Air magic"
-msgstr ""
+msgstr "Magia dell'Aria"
 
 #: playerclasses.xml
 msgid "Light Magic"
-msgstr ""
+msgstr "Magia della Luce"
 
 #: playerclasses.xml
 msgid "Water Magic"
-msgstr ""
+msgstr "MAgia dell'Acqua"
 
 #: playerclasses.xml
 msgid "Wind Magic"
-msgstr ""
+msgstr "Magia del Vento"
 
 #: playerclasses.xml
 msgid "Marksmanship"
-msgstr ""
+msgstr "Precisione"
 
 #: playerclasses.xml
 msgid "Fighting skills"
-msgstr ""
+msgstr "Abilità Combattive"
 
 #: playerclasses.xml
 msgid "Passive skills"
-msgstr ""
+msgstr "Abilità Passive"
 
 #: playerclasses.xml
 msgid "Fighting spirit"
-msgstr ""
+msgstr "Spirito Combattivo"
 
 #: playerclasses.xml
 msgid "Hunter magic"
-msgstr ""
+msgstr "Cacciatore magico"
 
 #~ msgid "Savegame"
 #~ msgstr "Salvataggio partita"
