--- a/translation/it/rob_the_robber.po
+++ b/translation/it/rob_the_robber.po
@@ -4,31 +4,34 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-22 07:46+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: rob_the_robber.xml
 msgid "Rob the robber"
-msgstr "Rob il Ladrone"
+msgstr ""
+"Razzia il ladrone ##Razzia means steal violently, and sounds like Mattia, a "
+"noun."
 
 #: rob_the_robber.xml
 msgid ""
 "Rob the robber breathed his last and provided a downright windfall while he "
 "was on it."
 msgstr ""
-"Rob il Ladrone e' passato a miglior vita lasciando una vera e propria "
+"Razzia il ladrone e' passato a miglior vita lasciando una vera e propria "
 "eredita'."
 
 #: rob_the_robber.xml
@@ -37,7 +40,7 @@ msgid ""
 "I'm on my way to Dwarfenwall to show it to this sergeant Wober. I have no "
 "idea why everyone was so afraid of this guy."
 msgstr ""
-"Rob il Ladrone e' morto e presto sara' dimenticato. Ho il suo ciondolo e "
+"Razzia il Ladrone e' morto e presto sara' dimenticato. Ho il suo ciondolo e "
 "vorrei andare a Dwarfenwall a mostrarlo a un certo Sergente Wober. Non "
 "capisco perche' tutti hanno paura di costui."
 
@@ -47,7 +50,7 @@ msgid ""
 "dispose of him and take his neckband. At least it spares me the unsavory "
 "task of carrying a head around."
 msgstr ""
-"Si mormora che Rob il Ladrone si nasconda nelle viscere della Foresta "
+"Si mormora che Razzia il Ladrone si nasconda nelle viscere della Foresta "
 "Fatata. Trovalo, eliminalo e prendigli il suo ciondolo. Almeno mi risparmi "
 "l'ingrato compito di portarmi in giro la sua testa."
 
@@ -161,36 +164,36 @@ msgid "Just curious."
 msgstr "Strano."
 
 #: rob_the_robber.xml
-#, fuzzy
 msgid "Rob the Robber killed"
-msgstr "Rob il Ladrone (ricompensa)"
+msgstr "Razzia il Ladrone è morto"
 
 #: rob_the_robber.xml
 msgid "Here is the necklace of Rob the robber."
-msgstr "Eccoti qui il ciondolo di Rob il Ladrone."
+msgstr "Eccoti qui il ciondolo di Razzia il Ladrone."
 
 #: rob_the_robber.xml
 msgid "I'll be damned!"
-msgstr ""
+msgstr "Che io sia dannato!"
 
 #: rob_the_robber.xml
-#, fuzzy
 msgid "You really got him?"
-msgstr "Qualcuno e' riuscito davvero a farlo fuori."
+msgstr "Sei riuscito a farlo fuori!"
 
 #: rob_the_robber.xml
 msgid ""
 "Better hope that the stories about him rising from his grave are just "
 "fairytales."
 msgstr ""
+"Speriamo che le voci riguardo al suo tornare dall'oltretomba siano solo "
+"favolette."
 
 #: rob_the_robber.xml
 msgid "What about my reward?"
-msgstr ""
+msgstr "E la mia ricompensa?"
 
 #: rob_the_robber.xml
 msgid "Sergeant Wober in Dwarfenwall has it."
-msgstr ""
+msgstr "Ce l'ha il sergente Wober a Dwarvenfall."
 
 #: rob_the_robber.xml
 msgid "Sergeant Wober"
@@ -206,7 +209,7 @@ msgstr "Non un secondo prima!"
 
 #: rob_the_robber.xml
 msgid "If you can bring it to me I will believe you that Rob is dead."
-msgstr "Se me lo riporterai sara' la prova che Rob e' davvero morto."
+msgstr "Se me lo riporterai sara' la prova che Razzia e' davvero morto."
 
 #: rob_the_robber.xml
 msgid ""
@@ -218,7 +221,7 @@ msgstr ""
 
 #: rob_the_robber.xml
 msgid "Rob the Robber (Reward)"
-msgstr "Rob il Ladrone (ricompensa)"
+msgstr "Razzia il Ladrone (ricompensa)"
 
 #: rob_the_robber.xml
 msgid "By all devils!"
