--- a/translation/it/testquest.po
+++ b/translation/it/testquest.po
@@ -4,20 +4,21 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-22 08:05+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: testquest.xml
 msgid "testquest"
@@ -33,47 +34,47 @@ msgstr "Test"
 
 #: testquest.xml
 msgid "This is a Test"
-msgstr ""
+msgstr "Questo è un test"
 
 #: testquest.xml
 msgid "surprised"
-msgstr ""
+msgstr "sorpreso"
 
 #: testquest.xml
 msgid "thoughtful"
-msgstr ""
+msgstr "pensieroso"
 
 #: testquest.xml
 msgid "happy"
-msgstr ""
+msgstr "felice"
 
 #: testquest.xml
 msgid "amused"
-msgstr ""
+msgstr "divertito"
 
 #: testquest.xml
 msgid "excited"
-msgstr ""
+msgstr "eccitato"
 
 #: testquest.xml
 msgid "in love"
-msgstr ""
+msgstr "innamorato"
 
 #: testquest.xml
 msgid "bored"
-msgstr ""
+msgstr "annoiato"
 
 #: testquest.xml
 msgid "unhappy"
-msgstr ""
+msgstr "scontento"
 
 #: testquest.xml
 msgid "sad"
-msgstr ""
+msgstr "triste"
 
 #: testquest.xml
 msgid "pain"
-msgstr ""
+msgstr "dolore"
 
 #: testquest.xml
 msgid "sneer"
@@ -85,65 +86,64 @@ msgstr ""
 
 #: testquest.xml
 msgid "offended"
-msgstr ""
+msgstr "offeso"
 
 #: testquest.xml
 msgid "threatening"
-msgstr ""
+msgstr "provocante"
 
 #: testquest.xml
 msgid "angry"
-msgstr ""
+msgstr "adirato"
 
 #: testquest.xml
 msgid "shouting a warcry"
-msgstr ""
+msgstr "mentre emette un'urlo di guerra"
 
 #: testquest.xml
 msgid "exhausted"
-msgstr ""
+msgstr "esausto"
 
 #: testquest.xml
 msgid "injured"
-msgstr ""
+msgstr "ferito"
 
 #: testquest.xml
 msgid "deadly injured"
-msgstr ""
+msgstr "ferito mortalmente"
 
 #: testquest.xml
 msgid "afraid"
-msgstr ""
+msgstr "preoccupato"
 
 #: testquest.xml
 msgid "in panic"
-msgstr ""
+msgstr "nel panico"
 
 #: testquest.xml
 msgid "putting up a distance"
-msgstr ""
+msgstr "tiene le distanze"
 
 #: testquest.xml
 msgid "being disgusted"
-msgstr ""
+msgstr "è disgustato"
 
 #: testquest.xml
 msgid "and yet another Test"
-msgstr ""
+msgstr "e ora un'altro Test"
 
 #: testquest.xml
 msgid "again a test"
-msgstr ""
+msgstr "Ancora un test"
 
 #: testquest.xml
 msgid "I am the first guard"
-msgstr ""
+msgstr "Sono la prima guardia"
 
 #: testquest.xml
 msgid "I am the second guard"
-msgstr ""
+msgstr "Sono la seconda guardia"
 
 #: testquest.xml
-#, fuzzy
 msgid "I am Fenor Marken"
-msgstr "Fenor Marken"
+msgstr "sono Fenor Marken"
