--- a/translation/it/the_besieged_farm.po
+++ b/translation/it/the_besieged_farm.po
@@ -4,20 +4,21 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-21 22:00+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: besieged_farm.xml
 msgid "The besieged farm"
@@ -28,36 +29,33 @@ msgid ""
 "The peasants are rescued, the goblins slain, and the service paid. What more "
 "can you ask for?"
 msgstr ""
-"I contadini sono in salvo, i goblin uccisi e le armate hanno avuto il loro "
-"compenso. Cosa possiamo chiedere di piu'?"
+"I contadini sono in salvo, i goblin uccisi e la paga è servita. Cosa "
+"possiamo chiedere di piu'?"
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "The peasants are rescued and the goblins slain. It's time to collect the "
 "reward for the trouble in Joringsbridge."
 msgstr ""
 "I contadini sono in salvo e il goblin uccisi. È ora di risquotere la "
-"ricompensa per la faccenda di Joringsbridge."
+"ricompensa per la faticaccia a Joringsbridge."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "The goblins around Bron's farm are not among the living anymore. I should "
 "knock at the door and make sure everything is all right. No peasants, no "
 "money."
 msgstr ""
-"I goblin nei dintorni della fattoria Bron sono stati tutti uccisi. Ora "
-"vorrei solo assicurarmi che tutto sia apposto. Niente contadini, niente "
-"denaro."
+"I goblin nei dintorni della fattoria Bron sono stati tutti uccisi. Meglio "
+"bussare e sentire se stanno tutti bene. Niente gente viva, niente soldi."
 
 #: besieged_farm.xml
 msgid ""
 "The farm of a peasant named Michel Bron is besieged by goblins. His family "
 "needs help - fast."
 msgstr ""
-"Veniamo al dunque. La fattoria di Michel Bron e' assediata dai goblin. La "
-"sua famiglia ha bisogno del tuo aiuto..veloce!"
+"La fattoria di Michel Bron e' assediata dai goblin. La sua famiglia ha "
+"bisogno di aiuto ... in fretta!"
 
 #: besieged_farm.xml
 msgid "Sergeant Lutterer"
@@ -69,24 +67,25 @@ msgstr "La fattoria"
 
 #: besieged_farm.xml
 msgid "Ah! Are you feeling like earning the money after all?"
-msgstr "Te la senti alla fine di guadagnare qualcosa?"
+msgstr "Heh! Sembra che tu abbia voglia di soldi alla fin fine, no?"
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "Don't think I haven't seen you hanging around back there."
-msgstr "Non penso. Non ti ho visto aggirare qua attorno."
+msgstr "Non penso. Non mi pare di averti visto bazzicare da ste parti."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Don't think I haven't seen you and your friend hanging around back there."
-msgstr "Non penso, non ho visto te o il tuo amico in giro qui attorno."
+msgstr ""
+"Non penso. Non mi pare di aver' visto te e i tuoi amici bazzicare da ste "
+"parti."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Don't think I haven't seen you and your friends hanging around back there."
-msgstr "Non penso. No ho visto ne' te ne' i tuoi amici aggirarsi qua attorno."
+msgstr ""
+"Non penso. Non mi pare di aver' visto te e i tuoi amici bazzicare da ste "
+"parti."
 
 #: besieged_farm.xml
 msgid "But I don't want to complain."
@@ -101,23 +100,20 @@ msgstr ""
 "infestano la fattoria Bron."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "I don't care how you do it, even if you gobble them raw."
-msgstr "Non mi interessa come farai, anche se li dovessi ingurgitare vivi."
+msgstr "Non mi interessa come farai, anche se dovessi mangiarteli vivi."
 
 #: besieged_farm.xml
 msgid "Just kidding."
-msgstr "Sto solo scherzando!."
+msgstr "Sto scherzando!."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "When you're done, come back to me."
-msgstr "Quando hai finito torna qui da me."
+msgstr "Quando hai finito torna da me."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid "I'm on my way."
-msgstr "A modo mio."
+msgstr "Considerami già li."
 
 #: besieged_farm.xml
 msgid "aisNorthMeadow"
@@ -167,13 +163,12 @@ msgid "Of course. Silly of me."
 msgstr "Ma certo! Che sciocco che sono."
 
 #: besieged_farm.xml
-#, fuzzy
 msgid ""
 "Really now, \"..name..\". Did you think she'd use carrier pigeons in this "
 "day and age?"
 msgstr ""
-"Credi davvero che lei voglia utilizzare di questi tempi i piccioni "
-"viaggiatori?"
+" \"..nome..\". Sul serio pensi che userebbe dei piccioni viaggiatori con i "
+"tempi che corrono?"
 
 #: besieged_farm.xml
 msgid "Let's just go collect the money."
@@ -201,7 +196,7 @@ msgstr ""
 
 #: besieged_farm.xml
 msgid "But that shall be of no concern to you."
-msgstr "Ma questo non dovrebbe preoccuparti."
+msgstr "Ma questo non ti dovrebbe interessare."
 
 #: besieged_farm.xml
 msgid "Here's the money."
