--- a/translation/it/the_poolmonster.po
+++ b/translation/it/the_poolmonster.po
@@ -4,20 +4,21 @@
 # 
 # Francesco Miglietta (fra9000) <miglietta.francesco@gmail.com>, 2010
 # 
+# Eugenio Fagioli <eugenio.fagioli@gmail.com>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-07-25 09:49\n"
-"Last-Translator: Francesco Miglietta (fra9000) <miglietta.francesco@gmail."
-"com>\n"
-"Language-Team: Italian <http://gamesopensource.altervista.org>\n"
+"PO-Revision-Date: 2011-10-21 21:50+0200\n"
+"Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
+"Language-Team: Italiano <>\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Content-Transfer-Encoding: 8bits\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: scene7.xml
 msgid "The Poolmonster"
@@ -37,11 +38,11 @@ msgstr "Soren Windclaw"
 
 #: scene7.xml
 msgid "Wow, thats beautiful."
-msgstr ""
+msgstr "Hey quanto è bello!"
 
 #: scene7.xml
 msgid "Are you getting sentimental now?"
-msgstr ""
+msgstr "Non mi diventare sentimentale proprio ora."
 
 #: scene7.xml
 msgid "... Der Anblick hat mich nur an mein Leben"
@@ -57,15 +58,15 @@ msgstr ""
 
 #: scene7.xml
 msgid "Sometimes I wish,"
-msgstr ""
+msgstr "Ogni tanto vorre,"
 
 #: scene7.xml
 msgid "I know enough people,"
-msgstr ""
+msgstr "conoscere più persone,"
 
 #: scene7.xml
 msgid "... only externally."
-msgstr ""
+msgstr "solo superficialmente."
 
 #: scene7.xml
 msgid "..."
@@ -73,39 +74,39 @@ msgstr "..."
 
 #: scene7.xml
 msgid "Do you really think that it"
-msgstr ""
+msgstr "Sul serio pensi che"
 
 #: scene7.xml
 msgid "Even the great"
-msgstr ""
+msgstr "Anche ai migliori"
 
 #: scene7.xml
 msgid "I hope you have"
-msgstr ""
+msgstr "Spero tu abbia"
 
 #: scene7.xml
 msgid "Why has it really"
-msgstr ""
+msgstr "Perché mai"
 
 #: scene7.xml
 msgid "We have to go now."
-msgstr ""
+msgstr "E' ora di smammare"
 
 #: scene7.xml
 msgid "Just a moment please."
-msgstr ""
+msgstr "Solo un attimo"
 
 #: scene7.xml
 msgid "Whats that on the water over there?"
-msgstr ""
+msgstr "Che è quella cosa nell'acqua laggiù?"
 
 #: scene7.xml
 msgid "Looks like a..."
-msgstr ""
+msgstr "Sembra un..."
 
 #: scene7.xml
 msgid "*Roar!*"
-msgstr ""
+msgstr "*ROAR!*"
 
 #: scene7.xml
 msgid "greyCurseLake"
