--- a/translation/en/rescue_willard.pot
+++ b/translation/en/rescue_willard.pot
@@ -56,11 +56,11 @@ msgid "Willard"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I hope you are making a good time searching for Willard. ##solo"
+msgid "I sincerely hope you find Willard in time. ##solo"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I hope you are making a good time searching for Willard."
+msgid "I sincerely hope you find Willard in time."
 msgstr ""
 
 #: rescue_willard.xml
@@ -92,7 +92,7 @@ msgid "What the..."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Do I have a sign somewere saying: Caution, dangerous monster??"
+msgid "Do I have a sign somewere saying: Caution, dangerous monster?!"
 msgstr ""
 
 #: rescue_willard.xml
@@ -100,13 +100,13 @@ msgid "That is the second time today!"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I could always feel if someone was a Branded One."
+msgid "I could always tell if someone was a Branded One."
 msgstr ""
 
 #: rescue_willard.xml
 msgid ""
-"But don't worry, I will give noone away, as long as they are behaving "
-"correctly."
+"But don't worry, I will give no one away, as long as they behave "
+"themselves."
 msgstr ""
 
 #: rescue_willard.xml
@@ -119,7 +119,7 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "There is something I'd like to ask of you."
-msgstr "."
+msgstr ""
 
 #: rescue_willard.xml
 msgid "Only someone like you could do it reliable."
@@ -130,7 +130,7 @@ msgid "Who would have thought that?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Does an honorable member of the city guard wants someone's throat cut?"
+msgid "Does an honorable member of the city guard want someone's throat cut?"
 msgstr ""
 
 #: rescue_willard.xml
@@ -138,21 +138,24 @@ msgid "What? I could have hired a professional assassin for that."
 msgstr ""
 
 #: rescue_willard.xml
-msgid ""
-"I thought you were the kind of Branded Ones that doesn't kill every human "
-"crossing their way."
+msgid "Perhaps I was mistaken and the stories are true. I had believed that a "
+"few Branded Ones might be capable of restraint..."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I'm sorry. Maybe my mouth slipped."
+msgid "And not wish to butcher every living thing that crossed their path."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Whatever. What is it you really want?"
+msgid "My apologies. It was a slip of the tongue."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Thanks. My name is Fenor Marken."
+msgid "So, what is it that you want?"
+msgstr ""
+
+#: rescue_willard.xml
+msgid "Thank you. My name is Fenor Marken."
 msgstr ""
 
 #: rescue_willard.xml
@@ -161,11 +164,11 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid ""
-"He was in the meadows with two collegues, when they were attacked by goblins."
+"He was out in the far meadows with two collegues, when they were attacked by goblins."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "And those cowards left him behind injured!"
+msgid "The cowards left him behind!"
 msgstr ""
 
 #: rescue_willard.xml
@@ -177,15 +180,15 @@ msgid "Surely you don't want us to bring back his corpse, do you?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "No, Willard isn't someone who would be killed by some lousy goblins."
+msgid "No, Willard isn't someone likely to be caught by a few lousy goblins."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I'm sure he waits somewhere for help."
+msgid "But he is cut off and those creatures are everywhere. I'm sure he is laying low, waiting for help."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I'm sure you are very busy."
+msgid "You seem very busy."
 msgstr ""
 
 #: rescue_willard.xml
@@ -197,7 +200,7 @@ msgid "That is why I only ask you to bring him this phasestone."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I wouldn't entrust this to anyone normaly."
+msgid "I wouldn't entrust this to anyone else normally."
 msgstr ""
 
 #: rescue_willard.xml
@@ -209,19 +212,23 @@ msgid "Who wouldn't take off with it?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "But you Branded Ones have other ways and means to travel, haven't you."
+msgid "But you Branded Ones have other ways and means to travel, haven't you?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "And you cannot use a phasestone since it is dedicated to Avaera, right?"
+msgid "And you cannot use a phasestone since it is dedicated to the goddess Avaera."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "That is why I called you when you were passing."
+msgid "That is why I would trust you to help."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "You know quite a lot."
+msgid "Somebody else who appears to know quite a lot."
+msgstr ""
+
+#: rescue_willard.xml
+msgid "Medair, the seat of learning! Where even the city guard are scholars"
 msgstr ""
 
 #: rescue_willard.xml
@@ -242,7 +249,7 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid ""
-"I'm sorry, but I don't want to waste my time searching for any gamekeepers."
+"I'm sorry, but I don't want to waste my time searching for gamekeepers."
 msgstr ""
 
 #: rescue_willard.xml
@@ -250,7 +257,7 @@ msgid "You are as cold-hearted as they say. ##solo"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "I'm sorry, but we cannot waste our time searching for any gamekeepers."
+msgid "I'm sorry, but we cannot waste our time searching for gamekeepers."
 msgstr ""
 
 #: rescue_willard.xml
@@ -258,7 +265,7 @@ msgid "You are as cold-hearted as they say."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "If only I could leave here."
+msgid "If only I could leave my post."
 msgstr ""
 
 #: rescue_willard.xml
@@ -271,7 +278,7 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "Leave, before I tell someone about you! ##solo"
-msgstr "o"
+msgstr ""
 
 #: rescue_willard.xml
 msgid "Then what do you want from me?"
@@ -286,7 +293,7 @@ msgid "Give Willard the stone (Reward)"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Thank's for your help."
+msgid "Thanks for your help."
 msgstr ""
 
 #: rescue_willard.xml
@@ -302,19 +309,19 @@ msgid "You are Willard, I suppose."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "That's me. Why do you know my name?"
+msgid "That's me. How do you know my name?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Your friend Fenor Marken sent us to give you this phasestone."
+msgid "Your friend Fenor Marken sent us and told us to give you this phasestone."
 msgstr ""
 
 #: rescue_willard.xml
-msgid "Holy gods! He still has that thing?"
+msgid "By Avaera's blessed and arcane...! He still has that thing?"
 msgstr ""
 
 #: rescue_willard.xml
-msgid "That was one of our youthful follys."
+msgid "This was the cause of a few youthful follies."
 msgstr ""
 
 #: rescue_willard.xml
