--- a/translation/uk/rescue_willard.po
+++ b/translation/uk/rescue_willard.po
@@ -65,12 +65,12 @@ msgid "Willard"
 msgstr "Віллард"
 
 #: rescue_willard.xml
-msgid "I hope you are making a good time searching for Willard. ##solo"
-msgstr "Я сподіваюся ти проведеш гарний час в пошуках Вілларда. ##solo"
+msgid "I sincerely hope you find Willard in time. ##solo"
+msgstr "Я щиро сподіваюся, ви знайдете Вілларда вчасно. ##solo"
 
 #: rescue_willard.xml
-msgid "I hope you are making a good time searching for Willard."
-msgstr "Я сподіваюся, ви проведете гарний час в пошуках Вілларда."
+msgid "I sincerely hope you find Willard in time."
+msgstr "Я щиро сподіваюся, ви знайдете Вілларда вчасно."
 
 #: rescue_willard.xml
 msgid "Have you changed your mind?"
@@ -101,21 +101,20 @@ msgid "What the..."
 msgstr "Що за..."
 
 #: rescue_willard.xml
-msgid "Do I have a sign somewere saying: Caution, dangerous monster??"
-msgstr "В мене є десь знак з попередженням: Увага, небезпечне чудовисько??"
+msgid "Do I have a sign somewere saying: Caution, dangerous monster?!"
+msgstr "В мене є десь знак з попередженням: Увага, небезпечне чудовисько?!"
 
 #: rescue_willard.xml
 msgid "That is the second time today!"
-msgstr "Сбогодні це вже вдруге!"
+msgstr "Сьогодні це вже вдруге!"
 
 #: rescue_willard.xml
-msgid "I could always feel if someone was a Branded One."
-msgstr "Я завжди відчуваю, якщо хтось Відмічений."
+msgid "I could always tell if someone was a Branded One."
+msgstr "Я завжди можу сказати, якщо хтось Відмічений."
 
 #: rescue_willard.xml
 msgid ""
-"But don't worry, I will give noone away, as long as they are behaving "
-"correctly."
+"But don't worry, I will give no one away, as long as they behave themselves."
 msgstr "Але не хвилюйтеся, я нікого не видаю, поки вони поводяться правильно."
 
 #: rescue_willard.xml
@@ -139,7 +138,7 @@ msgid "Who would have thought that?"
 msgstr "Хто б міг подумати?"
 
 #: rescue_willard.xml
-msgid "Does an honorable member of the city guard wants someone's throat cut?"
+msgid "Does an honorable member of the city guard want someone's throat cut?"
 msgstr "Почесний охоронець міста хоче перерізати чиєсь горло?"
 
 #: rescue_willard.xml
@@ -148,22 +147,26 @@ msgstr "Що? Я міг би найняти для цього професійн
 
 #: rescue_willard.xml
 msgid ""
-"I thought you were the kind of Branded Ones that doesn't kill every human "
-"crossing their way."
+"Perhaps I was mistaken and the stories are true. I had believed that a few "
+"Branded Ones might be capable of restraint..."
 msgstr ""
-"Я думав, ви ті Відмічені, що не вбивають кожної людини, яка переходить їм "
-"дорогу."
+"Може я помилився і історії правдиві. Я вірив, що частина Відмічених "
+"стримані..."
 
 #: rescue_willard.xml
-msgid "I'm sorry. Maybe my mouth slipped."
-msgstr "Вибачте. Вирвалось."
+msgid "And not wish to butcher every living thing that crossed their path."
+msgstr "І не вбивають кожну істоту, яка перейшла їм дорогу."
 
 #: rescue_willard.xml
-msgid "Whatever. What is it you really want?"
-msgstr "Байдуже. Що ви дійсно хочете?"
+msgid "My apologies. It was a slip of the tongue."
+msgstr "Мої вибачення. Я обмовився."
 
 #: rescue_willard.xml
-msgid "Thanks. My name is Fenor Marken."
+msgid "So, what is it that you want?"
+msgstr "Ну і що ви хочете?"
+
+#: rescue_willard.xml
+msgid "Thank you. My name is Fenor Marken."
 msgstr "Дякую. Мене звуть Фенор Маркен."
 
 #: rescue_willard.xml
@@ -172,12 +175,13 @@ msgstr "У мене є друг, лісник."
 
 #: rescue_willard.xml
 msgid ""
-"He was in the meadows with two collegues, when they were attacked by goblins."
+"He was out in the far meadows with two collegues, when they were attacked by "
+"goblins."
 msgstr "Він був в лузі з двома колегами, коли їх атакували гобліни."
 
 #: rescue_willard.xml
-msgid "And those cowards left him behind injured!"
-msgstr "І ті боягузи залишили його позаду пораненим!"
+msgid "The cowards left him behind!"
+msgstr "Ті боягузи залишили його позаду пораненим!"
 
 #: rescue_willard.xml
 msgid "Surely you don't want me to bring back his corpse, do you?"
@@ -188,16 +192,20 @@ msgid "Surely you don't want us to bring back his corpse, do you?"
 msgstr "І ви хочете, щоб ми приніс його труп, чи не так?"
 
 #: rescue_willard.xml
-msgid "No, Willard isn't someone who would be killed by some lousy goblins."
+msgid "No, Willard isn't someone likely to be caught by a few lousy goblins."
 msgstr "Ні, Віллард не той, кого можуть вбити якісь паршиві гобліни."
 
 #: rescue_willard.xml
-msgid "I'm sure he waits somewhere for help."
-msgstr "Я впевнений, що він чекає десь за допомогою."
+msgid ""
+"But he is cut off and those creatures are everywhere. I'm sure he is laying "
+"low, waiting for help."
+msgstr ""
+"Але він знепритомнів, а навколо ті істоти. Я впевнений, що він сховався і "
+"чекає допомоги."
 
 #: rescue_willard.xml
-msgid "I'm sure you are very busy."
-msgstr "Я впевнений, що ви дуже зайняті."
+msgid "You seem very busy."
+msgstr "Ви напевне дуже зайняті."
 
 #: rescue_willard.xml
 msgid "That is why I only ask you to bring him this phasestone. ##solo"
@@ -209,7 +217,7 @@ msgid "That is why I only ask you to bring him this phasestone."
 msgstr "Саме тому я лише прошу, щоб ви принесли йому цей фазовий камінь."
 
 #: rescue_willard.xml
-msgid "I wouldn't entrust this to anyone normaly."
+msgid "I wouldn't entrust this to anyone else normally."
 msgstr "Я б не довірив це комусь нормальному."
 
 #: rescue_willard.xml
@@ -221,22 +229,26 @@ msgid "Who wouldn't take off with it?"
 msgstr "Хто б не схотів з ним злиняти?"
 
 #: rescue_willard.xml
-msgid "But you Branded Ones have other ways and means to travel, haven't you."
-msgstr "Але ви Відмічені маєте інші шляхи і засоби для подорожей, чи не так."
+msgid "But you Branded Ones have other ways and means to travel, haven't you?"
+msgstr "Але ви Відмічені маєте інші шляхи і засоби для подорожей, чи не так?"
 
 #: rescue_willard.xml
-msgid "And you cannot use a phasestone since it is dedicated to Avaera, right?"
+msgid ""
+"And you cannot use a phasestone since it is dedicated to the goddess Avaera."
 msgstr ""
-"І ви не можете використовувати фазовий камінь оскільки він освячений "
-"Аваерою, вірно?"
+"І ви не можете використовувати фазовий камінь оскільки він освячений Аваерою."
 
 #: rescue_willard.xml
-msgid "That is why I called you when you were passing."
-msgstr "Ось чому я покликав вас, коли ви проходили повз."
+msgid "That is why I would trust you to help."
+msgstr "Саме тому я можу довіритись вам."
 
 #: rescue_willard.xml
-msgid "You know quite a lot."
-msgstr "Ви досить багато знаєте."
+msgid "Somebody else who appears to know quite a lot."
+msgstr "Ще хтось, хто знає досить багато."
+
+#: rescue_willard.xml
+msgid "Medair, the seat of learning! Where even the city guard are scholars"
+msgstr "Медайр, місце навчання! Тут навіть міська варта вчена"
 
 #: rescue_willard.xml
 msgid "Your friend is as good as safe."
@@ -256,7 +268,7 @@ msgstr "Дякую."
 
 #: rescue_willard.xml
 msgid ""
-"I'm sorry, but I don't want to waste my time searching for any gamekeepers."
+"I'm sorry, but I don't want to waste my time searching for gamekeepers."
 msgstr "Мені дуже шкода, але я не хочу тратити свій час на пошук лісника."
 
 #: rescue_willard.xml
@@ -264,7 +276,7 @@ msgid "You are as cold-hearted as they say. ##solo"
 msgstr "Ти такий грубосердечний, як вони кажуть. ##solo"
 
 #: rescue_willard.xml
-msgid "I'm sorry, but we cannot waste our time searching for any gamekeepers."
+msgid "I'm sorry, but we cannot waste our time searching for gamekeepers."
 msgstr "Мені дуже шкода, але ми не можемо тратити наш час на пошук лісника."
 
 #: rescue_willard.xml
@@ -272,8 +284,8 @@ msgid "You are as cold-hearted as they say."
 msgstr "Ви такі грубосердечні, як вони кажуть."
 
 #: rescue_willard.xml
-msgid "If only I could leave here."
-msgstr "Якби тільки я міг залишити це місце."
+msgid "If only I could leave my post."
+msgstr "Якби тільки я міг залишити пост."
 
 #: rescue_willard.xml
 msgid "I would search for him myself."
@@ -300,7 +312,7 @@ msgid "Give Willard the stone (Reward)"
 msgstr "Дати Вілларду камінь (Нагорода)"
 
 #: rescue_willard.xml
-msgid "Thank's for your help."
+msgid "Thanks for your help."
 msgstr "Дякую за вашу допомогу."
 
 #: rescue_willard.xml
@@ -316,20 +328,20 @@ msgid "You are Willard, I suppose."
 msgstr "Ви напевне Віллард."
 
 #: rescue_willard.xml
-msgid "That's me. Why do you know my name?"
+msgid "That's me. How do you know my name?"
 msgstr "Це я. Звідки ви знаєте моє ім'я?"
 
 #: rescue_willard.xml
-msgid "Your friend Fenor Marken sent us to give you this phasestone."
+msgid "Your friend Fenor Marken sent us and told us to give you this phasestone."
 msgstr "Ваш друг Фенор Маркен послав нас, щоб дати вам цей фазовий камінь."
 
 #: rescue_willard.xml
-msgid "Holy gods! He still has that thing?"
+msgid "By Avaera's blessed and arcane...! He still has that thing?"
 msgstr "Святі боги! Він все ще має ту штуку?"
 
 #: rescue_willard.xml
-msgid "That was one of our youthful follys."
-msgstr "Це була одна з наших юнацьких забавок."
+msgid "This was the cause of a few youthful follies."
+msgstr "Це було причиною кількох юнацьких дуростей."
 
 #: rescue_willard.xml
 msgid "Mine is long used up."
