--- a/translation/uk/the_trader.po
+++ b/translation/uk/the_trader.po
@@ -44,8 +44,8 @@ msgid "A moment, dear madam."
 msgstr "Момент, дорога пані."
 
 #: theTrader.xml
-msgid "A moment, dear mister."
-msgstr "Момент, дорогий пане."
+msgid "A moment, dear sir."
+msgstr "Момент, шановний пане."
 
 #: theTrader.xml
 msgid "A moment, dear ladies."
@@ -56,7 +56,7 @@ msgid "A moment, dear sirs."
 msgstr "Момент, шановні панове."
 
 #: theTrader.xml
-msgid "A moment, ladies and gentleman."
+msgid "A moment, ladies and gentlemen."
 msgstr "Момент, пані та панове."
 
 #: theTrader.xml
@@ -112,23 +112,25 @@ msgid "I see you are a woman of reason!"
 msgstr "Я бачу ви розумна жінка!"
 
 #: theTrader.xml
-msgid "An Empty Scroll is much to my regret only capable of one thing:"
+msgid "Much to my regret, an Empty Scroll is only capable of one thing:"
 msgstr "Порожній Згорток на мій превеликий жаль здатний тільки на одне:"
 
 #: theTrader.xml
-msgid "Establish a way through Harads Black Abyss."
-msgstr "Створення шляху через Чорну Безодню Харада."
+msgid "To establish a way through Harad's black abyss."
+msgstr "Створення шляху через чорну безодню Харада."
 
 #: theTrader.xml
 msgid ""
-"And to make it worse only to spots of great magical concentration like the "
+"To make it worse only to spots of great magical concentration like that "
 "big road shrine over there."
 msgstr ""
 "І ще гірше, лише на місцях великої магічної концентрації, як наприклад "
 "святиня на великій дорозі онтам."
 
 #: theTrader.xml
-msgid "It's power is furthermore depleted quickly and limited to one person."
+msgid ""
+"Furthermore, a scroll's power is depleted quickly and limited only to one "
+"person."
 msgstr "Крім того його сила швидко зменшується і обмежується однією особою."
 
 #: theTrader.xml
@@ -145,20 +147,19 @@ msgstr "Ні"
 
 #: theTrader.xml
 msgid ""
-"If you are getting close to a waypoint, your aura will bring the familiar "
-"spirits of this place to ignite warning flames."
+"When you get close to a waypoint, your aura will summon the familiar spirits "
+"to ignite the shrine's warning flames."
 msgstr ""
 "Коли ви наблизитесь до точки, ваша аура змусить духів цього місця запалити "
 "полум'я попередження."
 
 #: theTrader.xml
-msgid ""
-"But do not fear, they don't have the power to harm you in any way, really."
-msgstr "Але не бійтеся, вони не в силах нашкодити вам будь-яким чином."
+msgid "Fear not, they will not harm you in any way, honest."
+msgstr "Не бійтеся, вони не в змозі нашкодити вам, чесно."
 
 #: theTrader.xml
 msgid ""
-"Counterwise you can be sure that you are able to use the road shrine if you "
+"You can be sure that you are able to use the road shrine if you "
 "see the flames."
 msgstr ""
 "Тоді ви можете бути впевнені, що ви можете використати дорожню святиню якщо "
@@ -166,27 +167,27 @@ msgstr ""
 
 #: theTrader.xml
 msgid ""
-"If you click on a road shrine, your body will volatilize into Harad's Black "
-"Abyss."
+"If you click on a road shrine, your body will be transported through Harad's "
+"domain."
 msgstr ""
-"Якщо ви натиснете на дорожній святині, ваше тіло випарується в Чорну Безодню "
-"Харада."
+"Якщо ви натиснете на дорожній святині, ваше тіло перенесеться крізь "
+"володіння Харада."
 
 #: theTrader.xml
 msgid ""
-"Before your inner eye there will be a map with all the places, you have "
+"In your mind's eye you will see a map with all the waypoints you have "
 "already visited."
 msgstr ""
 "Перед внутрішнім поглядом ви побачите карту з усіма місцями, які ви вже "
 "відвідали."
 
 #: theTrader.xml
-msgid "They are shown as a circle."
-msgstr "Вони відображаються у вигляді кола."
+msgid "These are shown as small yellow points."
+msgstr "Вони відображаються у вигляді жовтих точок."
 
 #: theTrader.xml
 msgid ""
-"If you have an open portal in the world, it will be shown too, but by a red "
+"If you have an open portal in the world, that will be shown too, with a red "
 "dot."
 msgstr ""
 "Якщо у вас є відкритий портал в світі, він буде показаний теж, але червоною "
@@ -194,24 +195,52 @@ msgstr ""
 
 #: theTrader.xml
 msgid ""
-"Click on one of these symbols, and your body will reassemble itself fast as "
-"the wind at your destination."
+"Click on one of these symbols, and your body will rematerialize at your "
+"destination, as fast as the wind."
 msgstr ""
-"Натисніть на один з цих символів, і ваше тіло буде зібране у пункті "
-"призначення швидко як вітер."
+"Натисніть на один з цих символів, і ваше тіло буде рематеріалізоване у "
+"пункті призначення швидко як вітер."
+
+#: theTrader.xml
+msgid "Hmm. You seem to know a great deal about this, for a trader."
+msgstr "Хм. Як на торговця ви знаєте про це досить багато."
+
+#: theTrader.xml
+msgid ""
+"You pick these things up in your travels, except for business acumen, "
+"apparently."
+msgstr "Це все набувається в подорожах, за винятком ділової хватки, мабуть."
+
+#: theTrader.xml
+msgid "Clearly you are in the wrong line of work."
+msgstr "Очевидно, ви працюєте в невірному напрямку."
+
+#: theTrader.xml
+msgid "Be wary, it is not as safe around Medair as it used to be."
+msgstr "Будьте обережні, поблизу Медайру не так безпечно, як раніше."
+
+#: theTrader.xml
+msgid ""
+"Even travelling the roads may prove to be dangerous. Particularly if you are "
+"heading north."
+msgstr ""
+"Навіть подорож дорогами може виявитися небезпечною. Особливо, якщо ви "
+"прямуєте на північ."
 
 #: theTrader.xml
 msgid "Goblins and other beasts have stolen quite a lot recently."
 msgstr "Гобліни та інші звірі вкрали їх досить багато останнім часом."
 
 #: theTrader.xml
-msgid "It may be convenient to make a short detour to a well-assorted trader."
+msgid ""
+"You may find it convenient to make a short detour to a well-stocked trader."
 msgstr ""
-"Може бути дуже зручним зробити невеликий гак до добре забезпеченого торговця."
+"Може бути дуже зручним зробити невеликий гак до добре забезпеченого "
+"торговця."
 
 #: theTrader.xml
-msgid "Speaking of you?"
-msgstr "Як щодо вас?"
+msgid "Meaning yourself?"
+msgstr "Маєте на увазі себе?"
 
 #: theTrader.xml
 msgid "Actually not, regrettably."
@@ -219,7 +248,7 @@ msgstr "Насправді ні, на жаль."
 
 #: theTrader.xml
 msgid ""
-"As reported, I misinvested in the Empty Scrolls and have no available "
+"As reported, I invested badly in the Empty Scrolls and have no available "
 "capital."
 msgstr ""
 "Як я вже казав, я невірно інвестував все майно у Порожні Згортки і не маю "
@@ -227,42 +256,45 @@ msgstr ""
 
 #: theTrader.xml
 msgid ""
-"I'm afraid all I can give you for your wares in gold would be insufficient."
+"I'm afraid I have insufficient gold to buy assorted wares from treasure "
+"hunters and scavengers."
 msgstr ""
-"Боюся, всього, що я можу запропонувати вам за ваші вироби в золоті буде "
-"недостатньо."
+"Боюся, у мене недостатньо золота, щоб придбати різноманітні товари у "
+"мисливців за скарбами і сміттярів."
 
 #: theTrader.xml
-msgid "But I can supply you for a really long time. It's a promise."
-msgstr "Але я можу поставляти вас товаром на дуже довгий час. Це обіцянка."
+msgid "But I can supply you with scrolls for a long time. That's a promise."
+msgstr "Але я можу постачати вас згортками дуже довгий час. Це обіцянка."
 
 #: theTrader.xml
-msgid "One reason being customers are really rare in these parts."
+msgid "One reason being; customers are rare in these parts."
 msgstr "Одною з причин є те, що клієнти в цих місцях це велика рідкість."
 
 #: theTrader.xml
-msgid "They are everywhere."
-msgstr "Вони є скрізь."
+msgid ""
+"Surely they can be found anywhere, especially in a place like this."
+msgstr ""
+"Вони є скрізь, особливо в такому місці як це."
 
 #: theTrader.xml
-msgid "with all due respect: That is a blessing."
-msgstr "при всій повазі: Це благословення."
+msgid "With all due respect, nobody wanting to buy scrolls from poor traders."
+msgstr "При всій повазі, ніхто не бажає придбати згортки у бідних торговців."
 
 #: theTrader.xml
-msgid "Not many Branded Ones would have listened to me as you did."
-msgstr "Не багато Відмічених слухали б мене як ви."
+msgid "Regardless, not many Branded Ones would have listened to me as you have."
+msgstr "Крім того не багато Відмічених слухали б мене як ви."
 
 #: theTrader.xml
-msgid "Allow me to give you an Empty Scroll as a freebie."
-msgstr "Дозвольте мені дати вам Порожній Згорток на халяву."
+msgid "Allow me to give you an Empty Scroll as a gift."
+msgstr "Дозвольте мені дати вам Порожній Згорток в подарунок."
 
 #: theTrader.xml
-msgid "Grace me with your presence again, if you please."
+msgid "Grace me with your presence again soon, if you please."
 msgstr "Удостойте мене вашою присутністю знову, якщо буде ваша ласка."
 
 #: theTrader.xml
-msgid "Wait! Does this thing have to be called \"Empty Scroll\"?"
-msgstr "Зачекайте! Ця штука називається \"Порожній Згорток\"?"
+msgid "Wait! Does this thing have to be called Empty Scroll?"
+msgstr "Зачекайте! Ця штука називається Порожній Згорток?"
 
 #: theTrader.xml
 msgid "Why not town portal or something like that?"
@@ -270,23 +302,23 @@ msgstr "Чому не міський портал або щось подібне
 
 #: theTrader.xml
 msgid ""
-"Well, they were sold to me as Empty Scrolls, but how you call them is "
+"Well, they were sold to me as Empty Scrolls, but what you call them is "
 "entirely up to you."
 msgstr ""
 "Ну, вони були продані мені як Порожні Згортки, але як ви їх назвете, "
 "залежить повністю від вас."
 
 #: theTrader.xml
-msgid "Why not \"Way to the town\" or something like that?"
-msgstr "Чому б не \"Шлях до міста\" чи щось подібне?"
+msgid "Why not \"way to the town\" or something like that?"
+msgstr "Чому б не \"шлях до міста\" чи щось подібне?"
 
 #: theTrader.xml
-msgid "What kind of name is this supposed to be??"
+msgid "What kind of name is that supposed to be!?"
 msgstr "Що це за така назва??"
 
 #: theTrader.xml
-msgid "More like town portal."
-msgstr "Краще міський портал."
+msgid "How about: \"town portal\"?"
+msgstr "Як щодо: \"міський портал\"?"
 
 #: theTrader.xml
 msgid "Now, now, honorable customers!"
@@ -294,7 +326,7 @@ msgstr "Ну, ну, почесні клієнти!"
 
 #: theTrader.xml
 msgid ""
-"They were sold to me as Empty Scrolls, but how you call them is entirely up "
+"They were sold to me as Empty Scrolls, but what you call them is entirely up "
 "to you!"
 msgstr ""
 "Вони були продані мені як Порожні Згортки, але як ви їх назвете, залежить "
@@ -313,7 +345,7 @@ msgid "Explain the belt?"
 msgstr "Пояснити пояс?"
 
 #: theTrader.xml
-msgid "Well, you now about your inventory, right?"
+msgid "Well, you know about your inventory, right?"
 msgstr "Ну, ви знаєте про ваш інвентар, чи не так?"
 
 #: theTrader.xml
@@ -321,8 +353,12 @@ msgid "I thought so."
 msgstr "Я так думав."
 
 #: theTrader.xml
-msgid "At the bottom you have the small items, which take three rows of space."
-msgstr "Внизу у вас є дрібні предмети, які займають три ряди."
+msgid ""
+"At the bottom you have the small items tab, click on it to access the three "
+"rows of your small items inventory."
+msgstr ""
+"Внизу у вас є закладка з дрібними предметами, натисніть на неї щоб отримати "
+"доступ до трьох рядів з дрібними пердметами."
 
 #: theTrader.xml
 msgid "The top row represents your belt."
@@ -338,10 +374,10 @@ msgstr "Я впевнений ви помітили, вірно?"
 
 #: theTrader.xml
 msgid ""
-"And long years on the battlefield caused me to change potions for similar "
-"potions immediately once I used one."
+"Long years on the battlefield have honed my ability to change potions for "
+"similar potions immediately once I have used one."
 msgstr ""
-"І довгі роки на полі бою змушували мене змінювати одні зілля на інші такі ж, "
+"Довгі роки на полі бою змушували мене змінювати одні зілля на інші такі ж, "
 "як тільки я їх використовував."
 
 #: theTrader.xml
@@ -349,8 +385,12 @@ msgid "A useful skill."
 msgstr "Корисний навик."
 
 #: theTrader.xml
-msgid "Doesn't everyone learn it who wants to avoid death?"
-msgstr "Цьому вчиться кожен, хто хоче уникнути смерті?"
+msgid ""
+" A common skill. Any sell-sword that wants to avoid a quick and meaningless "
+"death knows of it."
+msgstr ""
+" Загальна навичка. Кожен, хто хоче уникнути швидкої і безглуздої смерті знає "
+"про це."
 
 #: theTrader.xml
 msgid "Well, whatever."
@@ -365,8 +405,8 @@ msgstr ""
 "миші в інвентарі або на поясі."
 
 #: theTrader.xml
-msgid "Alternativly you can choose the number of the belt slot it is in."
-msgstr "Або ви можете вибрати номер слота на поясі, це знаходиться зілля."
+msgid "Alternatively you can select the number of the belt slot it is in."
+msgstr "Або ви можете вибрати номер слота на поясі, де знаходиться зілля."
 
 #: theTrader.xml
 msgid ""
