--- a/translation/en/joringsbridge.pot
+++ b/translation/en/joringsbridge.pot
@@ -392,7 +392,7 @@ msgid ""
 msgstr ""
 
 #: joringsbridge.xml
-msgid "Otherwise, do your work diligent."
+msgid "Otherwise, do your work diligently."
 msgstr ""
 
 #: joringsbridge.xml
